--- a/webinar.html
+++ b/webinar.html
@@ -16,11 +16,14 @@
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css">
 	<link rel="stylesheet" href="https://kenwheeler.github.io/slick/slick/slick-theme.css">
     <style>
+    	.bg-success{
+    		background-color: #0e8e4b !important;
+    	}
     	.text-grey{
     		color: #7a7e9a !important;
     	}
     	.speaker-img{
-    		border-radius: 50%;border: 4px solid #066806ef;width: 90%;
+    		border-radius: 50%;border: 4px solid #066806ef;width: 80%;
     	}
     	ul{
     		padding-left: 0px !important;
@@ -82,17 +85,15 @@
 <section class="summary-section">
 	<div class="container py-3">
 		<div class="row align-items-center">
-			<div class="col-lg-6">
+			<div class="col-lg-6 col-6">
 				<div class="">
 					<img src="https://www.agrevolution.in/assets/frontend/images/logo-inner.svg">
 				</div>
 			</div>
-			<div class="col-lg-6">
-				<div class="mobile-d-none" align="right">
-	               <a class="optional-btn mt-2 text-decoration-none" href="callto:18001036110">
-	                  Call Us Now
-	               </a>
-		        </div>
+			<div class="col-lg-6 col-6">
+				<div align="right">
+					<img src="img/Logo-lichi.png" width="200px">
+				</div>
 			</div>
 		</div>
 	</div>
@@ -129,15 +130,15 @@
 		</ul>
 	</div>
 </section>
-<section class="bg-light">
+<section style="background: url('img/speakers/bg.jpg');background-size: 400%;background-position: left;">
 	<div class="container">
 		<div class="row py-5">
-			<div class="col-md-7 bg-white col-12">
-				<div class="bg-white px-3">
+			<div class="col-md-7 col-12">
+				<div class="px-3">
 					<h4 class="pt-3 font-weight-bold">वेबिनार का संक्षिप्त विवरण</h4>
 					<p class="pt-3 text-justify">
 						देहात देश भर के लीची उत्पादक किसानों के लिए लेकर आया है एक अविश्वसनीय मौका | जहाँ देश के कुछ प्रमुख कृषि उद्योग विशेषज्ञ बताएँगे लीची की खेती करने के सबसे बेहतर और प्रभावशाली तरीके|<br/>
-						देश के प्रतिष्ठित संस्थान ICAR-NRC और कोका कोला के विशेषज्ञ, एक ही प्लेटफार्म पर लीची की खेती से जुड़े  विभिन्न पहलुओं पर अपने विचार, और जानकारी शेयर करेंगे जोकि न केवल आप किसानों को सशक्त बनने में मदद करेगा बल्कि आपको, पैदावार बढ़ाने, उत्पादकता बढ़ाने,खेती के दौरान आने वाली महत्वपूर्ण बाधाओं का समाधान करने, भंडारण में सहायता के साथ-साथ अगले सीजन की तैयारी में भी मदद करेगा |<br/>
+						देश के प्रतिष्ठित संस्थान ICAR-NRC और कोका कोला के विशेषज्ञ, एक ही प्लेटफार्म पर लीची की खेती से जुड़े  विभिन्न पहलुओं पर अपने विचार, और जानकारी शेयर करेंगे जोकि न केवल आप किसानों को सशक्त बनने में मदद करेगा बल्कि, आपको पैदावार बढ़ाने, उत्पादकता बढ़ाने,खेती के दौरान आने वाली महत्वपूर्ण बाधाओं का समाधान करने, भंडारण में सहायता के साथ-साथ अगले सीजन की तैयारी में भी मदद करेगा |<br/>
 						अपने लीची के बागानों को जड़ से लेकर फल तक पोषित करने की सम्पूर्ण जानकारी के लिए अभी रजिस्टर करें |
 					</p>
 					<p>
@@ -158,26 +159,21 @@
 						<div class="col-md-12 col-12">
 							<h4 class="py-2 font-weight-bold">हमारे पैनलिस्ट :</h4>
 						</div>
-						<div class="col-md-3 col-12" align="center">
-							<img src="img/speakers/speaker1.png" class="speaker-img">
-							<div class="font-weight-bold text-green pt-2">डॉ शेषधर पांडे, कार्यवाहक निर्देशक</div>
-							<div>भारतीय कृषि अनुसंधान परिषद - एनआरसी (लीची)</div>
-						</div>
-						<div class="col-md-3 col-12" align="center">
-							<img src="img/speakers/speaker2.png" class="speaker-img">
-							<div class="font-weight-bold text-green pt-2">डॉ संजय कुमार सिंह, वरिष्ठ वैज्ञानिक, हॉर्टिकल्चर</div>
-							<div>भारतीय कृषि अनुसंधान परिषद - एनआरसी  (लीची)</div>
-						</div>
-						<div class="col-md-3 col-12" align="center">
-							<img src="img/speakers/speaker1.png" class="speaker-img">
-							<div class="font-weight-bold text-green pt-2">डॉ आदित्य पांडा</div>
-							<div>हेड - फ्रूट सर्कुलर इकोनॉमी, कोका कोला </div>
-						</div>
-						<div class="col-md-3 col-12" align="center">
+						<div class="col-md-4 col-12" align="center">
 							<img src="img/speakers/speaker2.png" class="speaker-img">
 							<div class="font-weight-bold text-green pt-2">डॉ दिनेश चौहान</div>
 							<div>वीपी, न्यू इनिशिएटिव, देहात</div>
 						</div>
+						<div class="col-md-4 col-12" align="center">
+							<img src="img/speakers/speaker3.png" class="speaker-img">
+							<div class="font-weight-bold text-green pt-2">डॉ शेषधर पांडे</div>
+							<div>भारतीय कृषि अनुसंधान परिषद - एनआरसी (लीची)</div>
+						</div>
+						<div class="col-md-4 col-12" align="center">
+							<img src="img/speakers/speaker1.png" class="speaker-img">
+							<div class="font-weight-bold text-green pt-2">डॉ आदित्य पांडा</div>
+							<div>हेड - फ्रूट सर्कुलर इकोनॉमी, कोका कोला </div>
+						</div>						
 					</div>
 				</div>
 			</div>
@@ -261,11 +257,11 @@
 		<div class="container-fluid pt-5 mt-5 pb-3 mb-3">
 			<div class="row">
 					<div class="col-12 text-center">
-						<h1 class="text-white"> Contact us</h1>
-						<p class="text-white h4 my-2">Get free farming advisory on</p>
+						<h1 class="text-white">संपर्क करें</h1>
+						<p class="text-white h4 my-2">कृषि से जुड़ी सारी जानकारी पाए</p>
 						<a class="text-white text-decoration-none h1 pt-5" href="callto:18001036110">1800 1036 110</a>
-						<p class="text-white my-2" style="font-size: 25px;">For more info e-mail us at <a  class="text-white text-decoration-none" href="mailto:contact@agrevolution.in">contact@agrevolution.in</a></p>
-						<a href="mailto:contact@agrevolution.in" class="btn btn-light text-success mb-5 py-2 px-5" id="btn-1">Mail us</a>
+						<p class="text-white my-2" style="font-size: 25px;">अधिक जानकारी के लिए <a  class="text-white text-decoration-none" href="mailto:contact@agrevolution.in">contact@agrevolution.in</a> पर हमें मेल करें</p>
+						<a href="mailto:contact@agrevolution.in" class="btn btn-light text-success mb-5 py-2 px-5" id="btn-1">मेल करें</a>
 					</div>
 			</div>
 		</div>
@@ -293,8 +289,6 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/popper.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/js/bootstrap.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 <script type="text/javascript">var zf_DateRegex = new RegExp("^(([0][1-9])|([1-2][0-9])|([3][0-1]))[-](Jan|Feb|Mar|Apr|May|Jun|Jul|Aug|Sep|Oct|Nov|Dec|JAN|FEB|MAR|APR|MAY|JUN|JUL|AUG|SEP|OCT|NOV|DEC)[-](?:(?:19|20)[0-9]{2})$");
 var zf_MandArray = [ "PhoneNumber_countrycode", "PhoneNumber1_countrycode", "SingleLine"]; 
 var zf_FieldArray = [ "Name_First", "Name_Last", "PhoneNumber_countrycode", "PhoneNumber1_countrycode", "Email", "SingleLine", "MultiLine"]; 
